--- a/pkg/goDB/lz4/Makefile
+++ b/pkg/goDB/lz4/Makefile
@@ -10,7 +10,7 @@ DESTDIR=
 PREFIX = /usr
 CC    := $(CC)
 CFLAGS?= -O3
-CFLAGS+= -I. -std=c99 -Wall -Wextra -Wundef -Wshadow -Wstrict-prototypes -DLZ4_VERSION=\"$(RELEASE)\"
+CFLAGS+= -I. -std=c99 -Wall -Wextra -Wundef -Wshadow -Wstrict-prototypes -fPIC -DLZ4_VERSION=\"$(RELEASE)\"
 
 LIBDIR?= $(PREFIX)/lib
 INCLUDEDIR=$(PREFIX)/include
