--- a/addon/goprobe.service
+++ b/addon/goprobe.service
@@ -1,19 +1,12 @@
 [Unit]
-Description=goProbe Network Traffic Monitor
-After=syslog.target network.target
+Description=Network Traffic Monitoring
+After=network.target syslog.target
 
 [Service]
-Type=simple
-Environment=LD_LIBRARY_PATH=PREFIX/goProbe/lib
-PIDFile=/var/run/goprobe.pid
-ExecStartPre=/bin/rm -f /var/run/goprobe.pid
-ExecStartPre=/bin/rm -f PREFIX/goProbe/db/control.sock
-ExecStart=PREFIX/goProbe/bin/goProbe -config /opt/ntm/goProbe/etc/goprobe.conf &
-ExecReload=PREFIX/goProbe/shared/goprobe.targets reload
-ExecStop=/usr/bin/pkill -15 goProbe
-ExecStopPost=/bin/rm -f /var/run/goprobe.pid
-ExecStopPost=/bin/rm -f /opt/ntm/goProbe/db/control.sock
+ExecStart=/bin/goProbe -config /opt/ntm/goProbe/etc/goprobe.conf
+StandardOutput=syslog
 Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
+Alias=goprobe.service
