--- a/addon/goprobe.service
+++ b/addon/goprobe.service
@@ -8,6 +8,7 @@ ExecStart=/bin/goProbe -config /etc/goprobe.conf
 StandardOutput=syslog
 Restart=on-failure
 RestartSec=10
+TimeoutStopSec=30
 
 [Install]
 WantedBy=multi-user.target
