Attempt to fix parallelism of pipeline

--- a/.drone.yml
+++ b/.drone.yml
@@ -27,6 +27,8 @@ steps:
               - feature/*
           event:
               - push
+      depends_on:
+        - internal_net_clone
 
     - name: build
       image: golang:1.15-buster
