[goDB][decompression][lz4] #37: use lz4 frame library
Makes use of LZ4F functions for compression and decompression. This
slightly increases the size of goDB, but gains in decompression performance,
now using lz4 >=1.9.4.

This commit introduces a _hard_ dependency on lz4 1.9.4

--- a/addon/Makefile
+++ b/addon/Makefile
@@ -78,14 +78,15 @@ fetch:
 
 lib:
 
+	## C DEPENDENCIES ##
 	echo "*** fetching dynamic libraries ***"
 	curl -LO $(LZ4_URL); tar xf v$(LZ4_VERSION).tar.gz
 
-build:
-
-	## DEPENDENCIES ##
 	echo "*** compiling lz4 $(LZ4_VERSION) ***"
 	cd $(LZ4_LIB); make
+
+build:
+
 
 	## VERSION ###
 	echo "*** setting version information ***"
