[lz4][goDB] #37: review feedback
Internally changes the compress bound handling for lz4 compression.
It now uses the library's provided API function LZ4F_compressFrameBound()
to determine the worst-case size of the destination buffer.

Also adds a benchmark to compare the compression speed for different lz4
compression levels

--- a/addon/Dockerfile.debpkg
+++ b/addon/Dockerfile.debpkg
@@ -6,6 +6,15 @@ ARG GO_PRODUCT=goProbe
 
 WORKDIR /build
 
+# build lz4 so it can be linked against
+ARG LZ4_VERSION = 1.9.4
+ARG LZ4_URL     = https://github.com/lz4/lz4/archive/refs/tags/v${LZ4_VERSION}.tar.gz
+ARG LZ4_LIB     = lz4-${LZ4_VERSION}
+
+RUN curl -LO ${LZ4_URL} && \
+    tar xf v${LZ4_VERSION}.tar.gz && \
+    cd ${LZ4_LIB} && make && make install
+
 RUN git clone https://github.com/els0r/goProbe \
  && cd goProbe/addon \
  && make all \
