--- a/addon/Makefile
+++ b/addon/Makefile
@@ -54,36 +54,19 @@ DEB_VERSION := $(shell echo $(GIT_VERSION) | sed 's/v//g')
 DEB_VERSION := '$(DEB_VERSION)-$(COMMIT_SHA_SHORT)'
 DEB_BASE_IMAGE?=golang:latest
 
-# dependencies
-LZ4_VERSION = 1.9.4
-LZ4_URL     = https://github.com/lz4/lz4/archive/refs/tags/v$(LZ4_VERSION).tar.gz
-LZ4_LIB     = lz4-$(LZ4_VERSION)
-
-CGO_CFLAGS := "-I$(PWD)/$(LZ4_LIB)/lib"
-CGO_LDFLAGS := "-L$(PWD)/$(LZ4_LIB)/lib"
-
 # easy to use build command for everything related goprobe
 VERSION_PATH = $(BASEPATH)/pkg/version
 
 GO_BUILDTAGS = netcgo public $(UNAME_OS)
 
-GPBUILD      := CGO_CFLAGS='$(CGO_CFLAGS)' CGO_LDFLAGS='$(CGO_LDFLAGS)' go install -v -tags '$(GO_BUILDTAGS)'
-GPTESTBUILD  := CGO_CFLAGS='$(CGO_CFLAGS)' CGO_LDFLAGS='$(CGO_LDFLAGS)' go test -c -tags '$(GO_BUILDTAGS)'
+GPBUILD      := go install -v -tags '$(GO_BUILDTAGS)'
+GPTESTBUILD  := go test -c -tags '$(GO_BUILDTAGS)'
 
 fetch:
 
 	echo "*** fetching dependencies"
 	go mod tidy
 	go mod download
-
-lib:
-
-	## C DEPENDENCIES ##
-	echo "*** fetching dynamic libraries ***"
-	curl -LO $(LZ4_URL); tar xf v$(LZ4_VERSION).tar.gz
-
-	echo "*** compiling lz4 $(LZ4_VERSION) ***"
-	cd $(LZ4_LIB); make
 
 build:
 
@@ -179,6 +162,6 @@ clean:
 	rm -f $(GO_PRODUCT).tar.bz2
 	rm -f $(GO_PRODUCT)-$(DEB_VERSION).deb
 
-all: clean fetch lib build install
+all: clean fetch build install
 
 .SILENT:
