--- a/.github/workflows/build-deb.yml
+++ b/.github/workflows/build-deb.yml
@@ -21,16 +21,20 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build for AMD64
-        run: GOOS=linux GOARCH=amd64 go build -a ./...
+        run: |
+          GOOS=linux GOARCH=amd64 go build -a -o goProbe ./cmd/goProbe
+          GOOS=linux GOARCH=amd64 go build -a -o goQuery ./cmd/goQuery
 
       - name: deploy artifacts
         run: |
+          pwd
+          ls
           mkdir -p .debpkg/usr/local/bin
           mkdir -p .debpkg/etc/systemd/system
 
           # Binaries
-          cp cmd/goProbe/goProbe .debpkg/usr/bin/goProbe
-          cp cmd/goQuery/goQuery .debpkg/usr/bin/goQuery
+          cp goProbe .debpkg/usr/bin/goProbe
+          cp goQuery .debpkg/usr/bin/goQuery
 
           # Config
           cp addon/goprobe.service .debpkg/etc/systemd/system/goprobe.service
