--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -60,4 +60,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Debian Package
-          path: *.deb
+          path: ./*.deb
