--- a/addon/goprobe.service
+++ b/addon/goprobe.service
@@ -1,11 +1,10 @@
 [Unit]
 Description=Network Traffic Monitoring
-After=network-online.target syslog.target
+After=network-online.target
 
 [Service]
 Type=simple
 ExecStart=/usr/local/bin/goProbe -config /etc/goprobe.conf
-StandardOutput=syslog
 Restart=on-failure
 RestartSec=10
 TimeoutStopSec=30
