--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -18,7 +18,8 @@ jobs:
         id: go
 
       - name: Set environment
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+#        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=3.0.1" >> $GITHUB_ENV
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -38,7 +39,7 @@ jobs:
           cp goProbe .debpkg/usr/local/bin/goProbe
           cp goQuery .debpkg/usr/local/bin/goQuery
           cp goConvert .debpkg/usr/local/bin/goConvert
-          tar czf goprobe_${{ env.RELEASE_VERSION }}_debian_amd64.tar.gz goProbe goQuery goConvert
+          tar czf ./goprobe_${{ env.RELEASE_VERSION }}_debian_amd64.tar.gz goProbe goQuery goConvert
 
           # Config
           cp addon/goprobe.conf.example .debpkg/etc/goprobe.conf.example
@@ -57,7 +58,8 @@ jobs:
           package: goprobe
           package_root: .debpkg
           maintainer: fako1024
-          version: ${{ github.ref }}
+          #version: ${{ github.ref }}
+          version: v3.0.1
           arch: 'amd64'
           depends: 'liblz4-1, libzstd1'
           desc: 'goProbe Network Traffic Monitoring'
@@ -81,7 +83,8 @@ jobs:
         id: go
 
       - name: Set environment
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+#        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=3.0.1" >> $GITHUB_ENV
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -101,7 +104,7 @@ jobs:
           cp goProbe .rpmpkg/usr/local/bin/goProbe
           cp goQuery .rpmpkg/usr/local/bin/goQuery
           cp goConvert .rpmpkg/usr/local/bin/goConvert
-          tar czf goprobe_${{ env.RELEASE_VERSION }}_fedora_x86_64.tar.gz goProbe goQuery goConvert
+          tar czf ./goprobe_${{ env.RELEASE_VERSION }}_fedora_x86_64.tar.gz goProbe goQuery goConvert
 
           # Config
           cp addon/goprobe.conf.example .rpmpkg/etc/goprobe.conf.example
@@ -111,7 +114,8 @@ jobs:
           package: goprobe
           package_root: .rpmpkg
           maintainer: fako1024
-          version: ${{ github.ref }}
+          #version: ${{ github.ref }}
+          version: v3.0.1
           arch: 'x86_64'
           desc: 'goProbe Network Traffic Monitoring'
 
