--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -87,6 +87,9 @@ jobs:
 #        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
         run: echo "RELEASE_VERSION=3.0.1" >> $GITHUB_ENV
 
+      - name: Install OS dependencies
+        run: dnf -y install gcc libzstd-devel lz4-devel
+
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
 
