--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -1,10 +1,9 @@
 name: build-packages
 
 on:
-  - push
-#  push:
-#    tags:
-#      - 'v*.*.*'
+  push:
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build-deb:
@@ -18,8 +17,7 @@ jobs:
         id: go
 
       - name: Set environment
-#        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
-        run: echo "RELEASE_VERSION=3.0.1" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
@@ -58,8 +56,7 @@ jobs:
           package: goprobe
           package_root: .debpkg
           maintainer: fako1024
-          #version: ${{ github.ref }}
-          version: v3.0.1
+          version: ${{ github.ref }}
           arch: 'amd64'
           depends: 'liblz4-1, libzstd1'
           desc: 'goProbe Network Traffic Monitoring'
@@ -84,8 +81,7 @@ jobs:
         id: go
 
       - name: Set environment
-#        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
-        run: echo "RELEASE_VERSION=3.0.1" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
 
       - name: Install OS dependencies
         run: dnf -y install gcc libzstd-devel lz4-devel
@@ -118,8 +114,7 @@ jobs:
           package: goprobe
           package_root: .rpmpkg
           maintainer: fako1024
-          #version: ${{ github.ref }}
-          version: v3.0.1
+          version: ${{ github.ref }}
           arch: 'x86_64'
           desc: 'goProbe Network Traffic Monitoring'
 
