--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,5 +27,6 @@ jobs:
 
     - name: Test
       run: |
-        go test -race -v ./... -covermode=atomic -coverprofile=coverage.out
+        go test -race -v ./...
+        go test -v ./... -covermode=atomic -coverprofile=coverage.out
         go tool cover -func=coverage.out -o=coverage.out
