--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -1,9 +1,11 @@
 name: build-packages
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  - push
+# on:
+#   push:
+    # tags:
+    #   - 'v*.*.*'
 
 jobs:
   build-deb:
@@ -126,9 +128,47 @@ jobs:
             ./goprobe-${{ env.RELEASE_VERSION }}*x86_64.rpm
             ./goprobe_${{ env.RELEASE_VERSION }}_fedora_x86_64.tar.gz
 
+  build-apk:
+    runs-on: ubuntu-latest
+    container: alpine:3.17
+    steps:
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ^1.18
+        id: go
+
+      - name: Set environment
+        # run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=3.0.2" >> $GITHUB_ENV
+
+      - name: Install OS dependencies
+        run: apk add cmake make gcc libtool git bash musl-dev zstd-dev lz4-dev
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+
+      - name: Build for AMD64
+        run: |
+          GOOS=linux GOARCH=amd64 go build -a -o goProbe ./cmd/goProbe
+          GOOS=linux GOARCH=amd64 go build -a -o goQuery ./cmd/goQuery
+          GOOS=linux GOARCH=amd64 go build -a -o goConvert ./cmd/goConvert
+
+      - name: Deploy artifacts
+        run: |
+          tar czf ./goprobe_${{ env.RELEASE_VERSION }}_alpine_x86_64.tar.gz goProbe goQuery goConvert
+
+      - name: Store artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: Alpine
+          path: |
+            ./goprobe_${{ env.RELEASE_VERSION }}_alpine_x86_64.tar.gz
+
   release:
     runs-on: ubuntu-latest
-    needs: [build-deb, build-rpm]
+    needs: [build-deb, build-rpm, build-apk]
     steps:
 
       - uses: actions/download-artifact@v3
@@ -145,5 +185,6 @@ jobs:
             downloaded-artifacts/Debian/goprobe*.deb
             downloaded-artifacts/Debian/goprobe*.tar.gz
             downloaded-artifacts/Fedora/goprobe*.rpm
-            downloaded-artifacts/Fedora/goprobe*.tar.gz 
+            downloaded-artifacts/Fedora/goprobe*.tar.gz
+            downloaded-artifacts/Alpine/goprobe*.tar.gz
           generate_release_notes: true
