--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -13,9 +13,9 @@ jobs:
     steps:
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: ^1.18
+          go-version: 'stable'
         id: go
 
       - name: Set environment
@@ -77,9 +77,9 @@ jobs:
     steps:
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: ^1.18
+          go-version: 'stable'
         id: go
 
       - name: Set environment
@@ -134,9 +134,9 @@ jobs:
     steps:
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: ^1.18
+          go-version: 'stable'
         id: go
 
       - name: Set environment
