--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -145,9 +145,9 @@ jobs:
 
       - name: Build for AMD64
         run: |
-          GOOS=linux GOARCH=amd64 go build -a -o goProbe ./cmd/goProbe
-          GOOS=linux GOARCH=amd64 go build -a -o goQuery ./cmd/goQuery
-          GOOS=linux GOARCH=amd64 go build -a -o goConvert ./cmd/goConvert
+          GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -o goProbe ./cmd/goProbe
+          GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -o goQuery ./cmd/goQuery
+          GOOS=linux GOARCH=amd64 go build -buildvcs=false -a -o goConvert ./cmd/goConvert
 
       - name: Deploy artifacts
         run: |
