--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,13 +23,13 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build for AMD64
-      run: GOOS=linux GOARCH=amd64 go build -v -a -x ./...
+      run: GOOS=linux GOARCH=amd64 go build -tags jsoniter -v -a -x ./...
 
     - name: Test
       run: |
-        go test -v ./... -covermode=atomic -coverprofile=coverage.out
+        go test -tags jsoniter -v ./... -covermode=atomic -coverprofile=coverage.out
         go tool cover -func=coverage.out -o=coverage.out
 
     - name: Race Detector
       run: |
-        go test -race -v ./...
+        go test -tags jsoniter -race -v ./...
