--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,12 +23,19 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build for AMD64
-      run: GOOS=linux GOARCH=amd64 go build -tags jsoniter -v -a -x ./...
+      run: GOOS=linux GOARCH=amd64 go build -tags jsoniter -v -a ./...
+
+    - name: Build for AMD64 (Production Mode)
+      run: GOOS=linux GOARCH=amd64 go build -tags jsoniter,slimcap_nomock -v -a ./...
 
     - name: Test
       run: |
         go test -tags jsoniter -v ./... -covermode=atomic -coverprofile=coverage.out
         go tool cover -func=coverage.out -o=coverage.out
+
+    - name: Test (Production Mode)
+      run: |
+        go test -tags jsoniter,slimcap_nomock -v ./...
 
     - name: Race Detector
       run: |
