Make sure that the global-query server can be built on any platform
Moves the shellformat stuff to it's own package below types, since it
contains LINUX specifics. The global-query server should be platform
agnostic.

Also update the example configs for the global-query server so it can
be run as described in the README

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 *.deb
 *.test
 absolute
-cmd/gpctl/gpctl
+cmd/global-query/global-query
+cmd/goConvert/goConvert
 cmd/goProbe/goProbe
 cmd/goQuery/goQuery
-cmd/goConvert/goConvert
+cmd/gpctl/gpctl
 cmd/legacy/legacy
 .vscode/
